web/css/odr.1.6.03.css
/* ... */
*/

#ODRNavRight .top {
    margin-left: 25px;
}

#ODRMenuLabelRight {
    float: left;
    color: #aaa;
    font-size: 14px;
    margin-top: 40px;
    margin-left: -20px;
    transform: rotate(-90deg);
    -webkit-transform: rotate(-90deg);
    -moz-transform: rotate(-90deg);
    -o-transform: rotate(-90deg);
    -ms-transform: rotate(-90deg);

    /*position: fixed;*/
}

#ODRNavRightWrapper {
    display: none;
    position: fixed;
    width: 425px;
    top: 60px;
    right: -400px;
    z-index: 1000;

    background: none;
}

.NavSlideOut {
    position: relative;
    overflow: hidden;
    width: 450px;
    min-height: 350px;
    right: 0px;
    background: #eee;
    border-radius-top-right: 16px;
    border-radius-bottom-right: 16px;
    padding-top: 8px;
    padding-bottom: 8px;

    -webkit-transition: all 0.15s ease-out;
       -moz-transition: all 0.15s ease-out;
        -ms-transition: all 0.15s ease-out;
         -o-transition: all 0.15s ease-out;
            transition: all 0.15s ease-out;
    box-shadow: 0 0 1px rgba(0, 0, 0, 0.1), 0 1px 8px rgba(0, 0, 0, 0.21);
}

.tacked {
    color: #666;
}

.StickOpen {
    right: 400px;
}

.NavSlideOut:hover {
    -webkit-transform-origin: 100% 50%;
    -webkit-transform: translate(0px, 0px);
    -moz-transform-origin: 100% 50%;
    -moz-transform: translate(0px, 0px);
    -ms-transform-origin: 100% 50%;
    -ms-transform: translate(0px, 0px);
    -o-transform-origin: 100% 50%;
    -o-transform: translate(0px, 0px);
    transform-origin: 100% 50%;
    transform: translate(0px, 0px);
    position: relative; 
    right: 400px;    
    opacity: 1;    
    -webkit-transition: all 0.15s ease-out;
       -moz-transition: all 0.15s ease-out;
        -ms-transition: all 0.15s ease-out;
         -o-transition: all 0.15s ease-out;
            transition: all 0.15s ease-out;
}

#ODRNavRight ul {    
    list-style-type: none;
}

aside:after {
    background: none;
}

#toolbar {
    left: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 900;

    background: none;
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.52);

    background-image: -webkit-gradient(
        linear,
        left bottom,
        left top,
        color-stop(0, #EBECF6),
        color-stop(1, #F2FCFF)
    );
    background-image: -o-linear-gradient(top, #EBECF6 0%, #F2FCFF 100%);
    background-image: -moz-linear-gradient(top, #EBECF6 0%, #F2FCFF 100%);
    background-image: -webkit-linear-gradient(top, #EBECF6 0%, #F2FCFF 100%);
    background-image: -ms-linear-gradient(top, #EBECF6 0%, #F2FCFF 100%);
    background-image: linear-gradient(to top, #EBECF6 0%, #F2FCFF 100%);

}


#toolbar .right li.red > a,
#toolbar .right li > a,
ul.breadcrumb {
    border: 1px solid #dddddd;
    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
}

#toolbar .right li.red > a,
#toolbar .right li > a,
ul.breadcrumb li a {
    background: #dedede;
    color: #888;
    text-shadow: none;
}

#toolbar .right li.red > a:hover,
#toolbar .right li > a:hover,
ul.breadcrumb li a:hover {
    background: #eeeeee;
    color: #888;
    text-shadow: none;
}

ul.breadcrumb li a:after,
ul.breadcrumb li a:hover:active:after,
ul.breadcrumb li a:hover:after {
    background: none;
}

h1:after {
    display: none;
}

#ElementDataWrapper {
    padding-left: 4px; 
    margin: 0px;
}

.DataType {
    min-height: 250px;
}

.ChildDataType {

}

.ResultsDataTypeTools {
    font-size: 18px;
    color: #888;

    float: right;
    position: relative;
    top: -48px;
    height: 0px;
    line-height: 0px;

    padding: 0px 0px 4px 0px;
    z-index: 500;
}

.ResultsDataTypeTools span {
    line-height: 0px;
    margin-bottom: -1em;
}

.DataTypeTools {
    font-size: 18px;
    color: #888;
    float: right;
    position: relative;
    top: -48px;
    height: 0px;
    line-height: 0px;
    padding: 0px 0px 0px 0px;
    z-index: 500;
}

.ODRThemeElement > .DataTypeTools {
    margin: 5px 0px;
}

.tooltip {
    float: left;
    margin-top: 4px;
    margin-right: 4px;
}
.fa-muted {
    cursor: not-allowed;
    /*color: #aa0000;*/
}
.fa-faded {
    color: #dddddd;
}

#dialog_add_datafield .row label {
    width: 100px;
}

#dialog_add_datafield .row radio,
#dialog_add_datafield .row select,
#dialog_add_datafield .row input {
}

.DataField .row input:checkbox {
    padding-top: 8px;
}

.ui-dialog .actions {
    bottom: -20px;
}

.checkbox img {
    margin-top: 8px;
    margin-bottom: 4px;
}
    
.ShortText {
    max-height: 38px;
}

.SingleChild {
    /* border: 1px solid rgba(44,44,44,0.3); */
    padding: 10px 10px 10px 10px;
}

#main .shortcuts {
    display: none;
}

.ui-resizable-helper { border: 1px dotted #99F; }
.ui-sortable-placeholder { border: 1px dotted #99f; visibility: visible !important; height: 50px !important; }
.ui-sortable-placeholder * { visibility: hidden; }
.ui-state-highlight { height: 1.5em; line-height: 1.2em; }

.accordion-content {
    /* padding-top: 10px;
    padding-bottom: 10px; */
}

.ui-accordion-header {
    line-height: 24px;
    font-weight: bold;
    padding-left: 8px;
}

.ui-icon {
    display: inline;
}

h1 span {
    background: none;
}

form.no-box {
    background: none;
    border: none;
}

form .row {
    border-top-width: 1px;
}

.ODRGraph {
    border: 2px solid #eee;
}
/*
.ODRPseudoField {
    background-color: rgb(232,232,232);
    border: 1px solid rgb(160,160,160);
    border-radius: 3px;
    margin-top: 4px;
    margin-bottom: 4px;
    padding: 5px 5px 5px 5px;
    box-shadow: rgba(0, 0, 0, 0.219608) 0px 1px 1px 0px inset;
}
*/
.gallery {
    margin-right: 6px;
}

.ShortResults_offset {
    background-color: #fff;
}

.ODRGraph {
    background-color: white;
    border: 1px solid #aaa;
}

#ODRLoginTable {
    width: 300px;
    margin-left: auto;
    margin-right: auto;
}

#ODRLoginTable tr {
    margin-bottom: 8px;
}

#ODRLoginTable label {
    padding-top: 6px;
}

#pagination_header {
    margin-bottom: 3px;
}
/* ... */

